Fixed error with overlay on mobile devices with URL showbar

--- a/src/scss/components/_overlay.scss
+++ b/src/scss/components/_overlay.scss
@@ -5,7 +5,9 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    width: 100dvh;
+    height: 150vh;
+    height: 150dvh;
 
     z-index: 19;
 
